@@ -1,0 +1,2 @@
+[Icon Data]
+DisplayName=Debian White
